--- a/Lenos-Frontend/index.html
+++ b/Lenos-Frontend/index.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-lg-2 right">
                         <a href=""><i class="far fa-user"></i></a>
-                        <a href="" class="relative">
+                        <a href="wishlist.html" class="relative">
                             <i class="fa-regular fa-heart"></i>
                             <span class="wishlist-count absolute">6</span>
                         </a>
