--- a/Lenos-Frontend/shop.html
+++ b/Lenos-Frontend/shop.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="col-lg-2 right">
                         <a href=""><i class="far fa-user"></i></a>
-                        <a href="" class="relative">
+                        <a href="wishlist.html" class="relative">
                             <i class="fa-regular fa-heart"></i>
                             <span class="wishlist-count absolute">6</span>
                         </a>
@@ -161,21 +161,22 @@
                         </ul>
                     </div>
                     <div class="price-range-wrap">
-                                        <div class="price-range" data-min="20" data-max="400"></div>
-                                        <div class="range-slider">
-                                            <form action="#">
-                                                <div class="price-input">
-                                                    <label for="amount">Price: </label>
-                                                    <input type="text" id="amount">
-                                                </div>
-                                                <button class="filter-btn">filter</button>
-                                            </form>
-                                        </div>
-                                    </div>
+                        <h4>Price</h4>
+                        <div class="price-range" data-min="20" data-max="1000"></div>
+                        <div class="range-slider">
+                            <form action="#">
+                                <button class="filter-btn">filter</button>
+                                <div class="price-input">
+                                    <label for="amount">Price:</label>
+                                    <input type="text" id="amount">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                     <div class="tags">
                         <h4>Product tags</h4>
-                        <span>Life Style</span>
-                        <span>Trend</span>
+                        <a href=""><span>Life Style</span></a>
+                        <a href=""><span>Trend</span></a>
                     </div>
                 </div>
                 <div class="col-lg-9">
