--- a/Lenos-Frontend/wishlist.html
+++ b/Lenos-Frontend/wishlist.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-ui-slider@1.12.1/jquery-ui.css">
     <title>Lenos</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -104,101 +106,108 @@
             </div>
         </div>
     </header>
-    <!-- Header start -->
+    <!-- Header end -->
+
+    <!-- Breadcrumb start -->
+    <section class="page-breadcrumb">
+        <div class="content">
+            <img src="assets/img/breadcrumb/banner.jpg" alt="">
+            <div class="crumbcontent">
+                <h1>Wishlist</h1>
+                <div>
+                    <a href="index.html">Home</a> <span>/</span> <span>Wishlist</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Breadcrumb end -->
 
     <!-- Main start -->
     <main>
-        <!-- Breadcrumb start -->
-        <section class="page-breadcrumb">
-            <div class="content">
-                <img src="assets/img/breadcrumb/banner.jpg" alt="">
-                <div class="crumbcontent">
-                    <h1>About Us</h1>
-                    <div>
-                        <a href="index.html">Home</a> <span>/</span> <span>About Us</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Breadcrumb end -->
-
-        <!-- Product-Promo start -->
-        <section class="product-promo">
+        <section class="wishlist-section">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-7 left">
-                        <img src="assets/img/product-promo/product-promo-1.jpg" alt="">
-                    </div>
-                    <div class="col-lg-5 right">
-                        <h1>Spring Winter 2022</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-                        <a href="">SHOP THE LOOK</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Product-Promo end -->
-
-        <!-- Brand logos start -->
-        <section class="brand-section">
-            <div class="brand-logo">
-                <div class="title">
-                    <h1>“ We are commutity led, with a continued commitment to be the most responsible version of ourselves - and we never rest on our laurels. ”</h1>
-                </div>
-                <div class="logos">
-                    <div class="container">
-                        <div class="row">
-                            <div class="box"><img src="assets/img/brands-logos/logo-1.png" alt=""></div>
-                            <div class="box"><img src="assets/img/brands-logos/logo-2.png" alt=""></div>
-                            <div class="box"><img src="assets/img/brands-logos/logo-3.png" alt=""></div>
-                            <div class="box"><img src="assets/img/brands-logos/logo-4.png" alt=""></div>
-                            <div class="box"><img src="assets/img/brands-logos/logo-5.png" alt=""></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Brand logos end -->
-
-        <!-- Our Mission start -->
-        <section class="our-mission-section">
-            <div class="our-mission">
-                <div class="container">
-                   <div class="row align-items-center">
-                    <div class="col-lg-6 left">
-                        <h1>Our Mission</h1>
-                        <p>Complexion-perfecting natural foundation enriched with antioxidant-packed superfruits, vitamins, and other skin-nourishing nutrients. Creamy liquid formula sets with a pristine matte finish for soft, velvety smooth skin. Made using clean, non-toxic ingredients, our products are designed for everyone… <br><br> Looking for love in all the wrong places? Start with something pure, something good for you, and something that makes you feel pampered like a princess. We’re talking about clean beauty gift sets, of course – and we’ve got a bouquet of beauties for yourself or someone you love!</p>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <img src="assets/img/about/IMG-1.jpg" alt="">
-                    </div>
-                   </div>
-                </div>
-            </div>
-        </section>
-        <!-- Our Mission start -->
-
-        <section class="team-section">
-            <div class="container">
-                <h1>We Pride Ourselves On Have A Team Of Highly Skilled</h1>
-                <p>Preorder now to receive exclusive deals & gifts</p>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <img src="assets/img/about/team-1.jpg" alt="">
-                        <span class="position">Founder, Chief Creative</span>
-                        <span class="fullname">John Doe</span>
-                    </div>
-                    <div class="col-lg-4">
-                        <img src="assets/img/about/team-2.jpg" alt="">
-                        <span class="position">Founder, COO</span>
-                        <span class="fullname">Valeriia Nadopta</span>
-                    </div>
-                    <div class="col-lg-4">
-                        <img src="assets/img/about/team-3.png" alt="">
-                        <span class="position">Founder, CEO</span>
-                        <span class="fullname">Jennifer C</span>
-                    </div>
-                </div>
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <td class="pro-img"><a href="#"><img class="img-fluid" src="assets/img/product/product-1.jpg" alt="Product"/></a></td>
+                            <td class="pro-content">
+                                <a href="#">element snowboard</a>
+                                <div class="pro-price">
+                                    <span class="line-price">$600</span>
+                                    <span class="price">$500</span>
+                                </div>
+                                <div class="pro-date">
+                                    <span>May 17, 2022</span>
+                                </div>
+                            </td>
+                            <td class="pro-action">
+                                <span class="text-success d-block">In Stock</span>
+                                <a href="">ADD TO CART</a>
+                            </td>
+                            <td>
+                                <i class="bi bi-x-lg"></i>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="pro-img"><a href="#"><img class="img-fluid" src="assets/img/product/product-1.jpg" alt="Product"/></a></td>
+                            <td class="pro-content">
+                                <a href="#">element snowboard</a>
+                                <div class="pro-price">
+                                    <span class="line-price">$600</span>
+                                    <span class="price">$500</span>
+                                </div>
+                                <div class="pro-date">
+                                    <span>May 17, 2022</span>
+                                </div>
+                            </td>
+                            <td class="pro-action">
+                                <span class="text-success d-block">In Stock</span>
+                                <a href="">ADD TO CART</a>
+                            </td>
+                            <td>
+                                <i class="bi bi-x-lg"></i>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="pro-img"><a href="#"><img class="img-fluid" src="assets/img/product/product-1.jpg" alt="Product"/></a></td>
+                            <td class="pro-content">
+                                <a href="#">element snowboard</a>
+                                <div class="pro-price">
+                                    <span class="pro-price">$500</span>
+                                </div>
+                                <div class="pro-date">
+                                    <span>May 17, 2022</span>
+                                </div>
+                            </td>
+                            <td class="pro-action">
+                                <span class="text-success d-block">In Stock</span>
+                                <a href="">ADD TO CART</a>
+                            </td>
+                            <td>
+                                <i class="bi bi-x-lg"></i>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="pro-img"><a href="#"><img class="img-fluid" src="assets/img/product/product-1.jpg" alt="Product"/></a></td>
+                            <td class="pro-content">
+                                <a href="#">element snowboard</a>
+                                <div class="pro-price">
+                                    <span class="pro-price">$500</span>
+                                </div>
+                                <div class="pro-date">
+                                    <span>May 17, 2022</span>
+                                </div>
+                            </td>
+                            <td class="pro-action">
+                                <span class="text-success d-block">In Stock</span>
+                                <a href="">ADD TO CART</a>
+                            </td>
+                            <td>
+                                <i class="bi bi-x-lg"></i>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
     </main>
@@ -240,6 +249,39 @@
         </div>
     </footer>
     <!-- Footer end -->
+
+    <!-- Quick Modal start -->
+    <div class="product-modal d-none">
+        <div class="modal-overlay"></div>
+        <div class="product-content">
+            <div class="left">
+                <div class="img modal-slick">
+                    <img src="assets/img/product/product-4.jpg" alt="">
+                    <img src="assets/img/product/product-3.jpg" alt="">
+                    <img src="assets/img/product/product-2.jpg" alt="">
+                    <img src="assets/img/product/product-1.jpg" alt="">
+                </div>
+            </div>
+            <div class="right">
+                <i class="bi bi-x-lg modal-close"></i>
+                <h3>Cocomi Rainbow Rose Gold</h3>
+                <div class="price-box">
+                    <span class="price">$225</span>
+                    <span class="line-price">$325</span>
+                    <span class="precent">Saved 31%</span>
+                </div>
+                <p class="description">Donec accumsan auctor iaculis. Sed suscipit arcu ligula, at egestas magna molestie a. Proin ac ex maximus, ultrices justo</p>
+                <p class="availability">In Stock</p>
+                <div class="cart-qty-add">
+                    <div class="quantity">
+                        <div class="pro-qty"><input type="text" value="1"></div>
+                    </div>
+                    <a class="add-btn" href="">ADD TO CART</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Quick Modal end -->
 
     <!-- Mini Cart start -->
     <div class="minicart d-none">
@@ -335,13 +377,15 @@
     </div>
     <!-- Mini Cart end -->
 
-    <!-- Go To Top button start-->
+    <!-- Go To Top -->
     <div class="scroll-top d-none"><i class="bi bi-chevron-up"></i></div>
-    <!-- Go To Top button end -->
-
+    <!-- Go To Top -->
+    
 </body>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.js" integrity="sha512-GkPcugMfi6qlxrYTRUH4EwK4aFTB35tnKLhUXGLBc3x4jcch2bcS7NHb9IxyM0HYykF6rJpGaIJh8yifTe1Ctw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-ui-slider@1.12.1/jquery-ui.js"></script>
 <script src="assets/js/main.js"></script>
 </html>
