product_details_complated

--- a/Lenos-Frontend/about.html
+++ b/Lenos-Frontend/about.html
@@ -14,8 +14,17 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- Site Input Animations start -->
+    <div id="input-gif" style="display:none;">
+        <div id="icorta">    
+            <img src="assets/img/Clock.gif">
+            <img class="logo" src="assets/img/logo.png" alt="">      
+        </div>
+    </div>
+    <!-- Site Input Animations end -->
+
     <!-- Header start -->
-    <header>
+    <header id="header">
         <div class="header-top">
             <div class="container">
                 <div class="row">
@@ -107,7 +116,7 @@
     <!-- Header start -->
 
     <!-- Main start -->
-    <main>
+    <main id="main">
         <!-- Breadcrumb start -->
         <section class="page-breadcrumb">
             <div class="content">
@@ -205,7 +214,7 @@
     <!-- Main end -->
 
     <!-- Footer start -->
-    <footer>
+    <footer id="footer">
         <div class="top">
             <div class="container">
                 <div class="row">
@@ -343,5 +352,6 @@
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js" integrity="sha512-eYSzo+20ajZMRsjxB6L7eyqo5kuXuS2+wEbbOkpaur+sA2shQameiJiWEzCIDwJqaB0a4a6tCuEvCOBHUg3Skg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="assets/js/main.js"></script>
 </html>
