--- a/Lenos-Frontend/wishlist.html
+++ b/Lenos-Frontend/wishlist.html
@@ -16,8 +16,17 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- Site Input Animations start -->
+    <div id="input-gif" style="display:none;">
+        <div id="icorta">    
+            <img src="assets/img/Clock.gif">   
+            <img class="logo" src="assets/img/logo.png" alt="">   
+        </div>
+    </div>
+    <!-- Site Input Animations end -->
+
     <!-- Header start -->
-    <header>
+    <header id="header">
         <div class="header-top">
             <div class="container">
                 <div class="row">
@@ -108,22 +117,22 @@
     </header>
     <!-- Header end -->
 
-    <!-- Breadcrumb start -->
-    <section class="page-breadcrumb">
-        <div class="content">
-            <img src="assets/img/breadcrumb/banner.jpg" alt="">
-            <div class="crumbcontent">
-                <h1>Wishlist</h1>
-                <div>
-                    <a href="index.html">Home</a> <span>/</span> <span>Wishlist</span>
+    <!-- Main start -->
+    <main id="main">
+        <!-- Breadcrumb start -->
+        <section class="page-breadcrumb">
+            <div class="content">
+                <img src="assets/img/breadcrumb/banner.jpg" alt="">
+                <div class="crumbcontent">
+                    <h1>Wishlist</h1>
+                    <div>
+                        <a href="index.html">Home</a> <span>/</span> <span>Wishlist</span>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <!-- Breadcrumb end -->
+        </section>
+        <!-- Breadcrumb end -->
 
-    <!-- Main start -->
-    <main>
         <section class="wishlist-section">
             <div class="container">
                 <table class="table table-bordered">
@@ -214,7 +223,7 @@
     <!-- Main end -->
 
     <!-- Footer start -->
-    <footer>
+    <footer id="footer">
         <div class="top">
             <div class="container">
                 <div class="row">
@@ -388,4 +397,5 @@
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery-ui-slider@1.12.1/jquery-ui.js"></script>
 <script src="assets/js/main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js" integrity="sha512-eYSzo+20ajZMRsjxB6L7eyqo5kuXuS2+wEbbOkpaur+sA2shQameiJiWEzCIDwJqaB0a4a6tCuEvCOBHUg3Skg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </html>
