Lenos-Frontend-Final

--- a/Lenos-Frontend/product-details.html
+++ b/Lenos-Frontend/product-details.html
@@ -15,7 +15,6 @@
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.jssocials/1.4.0/jssocials.css" />
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.jssocials/1.4.0/jssocials-theme-minima.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/raty/3.1.1/jquery.raty.css" integrity="sha512-eAw/PBoRwV3poi1Cgw4W6dZ/7XyetSWjhSqnCevCghOJ6J+TCcJgt8qcEml8It83K6GQVZbXeFA8d3z8pgo82w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
     <title>Lenos</title>
     <link rel="stylesheet" href="assets/css/style.css">
@@ -231,9 +230,9 @@
                                         <div class="rev-stars">
                                             <i class="bi bi-star-fill"></i>
                                             <i class="bi bi-star-fill"></i>
-                                            <i class="bi bi-star-half"></i>
-                                            <i class="bi bi-star"></i>
-                                            <i class="bi bi-star"></i>
+                                            <i class="bi bi-star-fill"></i>
+                                            <i class="bi bi-star-fill"></i>
+                                            <i class="bi bi-star-fill"></i>
                                         </div>
                                         <p class="rev-count">0 Reviews</p>
                                         <div class="rev-bar">
@@ -303,7 +302,32 @@
                                             </div>
                                         </div>
                                     </form>
-
+                                    <div class="review-user">
+                                        <div class="col-lg-12 user-img">
+                                            <div class="img">
+                                                <img src="assets/img/icon/user.png" alt="">
+                                            </div>
+                                            <span>Your review is awaiting approval</span>
+                                        </div>
+                                        <div class="col-lg-12 stars-date">
+                                            <div class="rev-stars">
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
+                                                <i class="bi bi-star"></i>
+                                            </div>
+                                            <ul>
+                                                <li>June 13, 2022 at 8:31 pm</li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <p class="rev-title">Lorem ipsum dolor sit amet.</p>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <p class="rev">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, pariatur!</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -498,16 +522,49 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-2 center-left">
-    
+                    <div class="col-lg-2 center">
+                        <ul>
+                            <p>Help</p>
+                            <li><a href="">Cart</a></li>
+                            <li><a href="">Reviews</a></li>
+                            <li><a href="">About Us</a></li>
+                            <li><a href="">Contact Us</a></li>
+                            <li><a href="">My Account</a></li>
+                        </ul>
                     </div>
-                    <div class="col-lg-2 center-right"></div>
-                    <div class="col-lg-4 right"></div>
+                    <div class="col-lg-2 center">
+                        <ul>
+                            <p>Services</p>
+                            <li><a href="">Shop</a></li>
+                            <li><a href="">Reviews</a></li>
+                            <li><a href="">About Us</a></li>
+                            <li><a href="">Contact Us</a></li>
+                            <li><a href="">My Account</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 right">
+                        <i class="bi bi-envelope"></i>
+                        <h5>SUBSCRIBE OUR NEWSLETTER</h5>
+                        <p>Plus, hear about the latest and greatest from our family of brands</p>
+                        <form action="">
+                            <input name="email_addres" placeholder="Email Address..." type="text" required>
+                            <button class="btn-subscribe">SUBSCRIBE</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="bottom">
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 left">
+                        <p>Copyright © <span>2022.</span> All Rights Reserved</p>
+                    </div>
+                    <div class="col-lg-6 right">
+                        <img src="assets/img/icon/payment-1.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- Footer end -->
@@ -649,6 +706,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.js" integrity="sha512-GkPcugMfi6qlxrYTRUH4EwK4aFTB35tnKLhUXGLBc3x4jcch2bcS7NHb9IxyM0HYykF6rJpGaIJh8yifTe1Ctw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery-ui-slider@1.12.1/jquery-ui.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js" integrity="sha512-eYSzo+20ajZMRsjxB6L7eyqo5kuXuS2+wEbbOkpaur+sA2shQameiJiWEzCIDwJqaB0a4a6tCuEvCOBHUg3Skg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.jssocials/1.4.0/jssocials.min.js"></script>
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js" integrity="sha512-eYSzo+20ajZMRsjxB6L7eyqo5kuXuS2+wEbbOkpaur+sA2shQameiJiWEzCIDwJqaB0a4a6tCuEvCOBHUg3Skg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
