--- a/Lenos-Frontend/index.html
+++ b/Lenos-Frontend/index.html
@@ -339,7 +339,7 @@
         <section class="feature">
             <div class="container">
                 <div class="title">
-                    <h1>Trending Now</h1>
+                    <h1>Feature Product</h1>
                     <p>We are happy to introduce the new Lawson Collection. These are three quartz models designed with simplicity and elegance kept in mind.</p>
                 </div>
                 <div class="row">
