--- a/Lenos-Frontend/shop.html
+++ b/Lenos-Frontend/shop.html
@@ -137,7 +137,7 @@
         </section>
         <!-- Breadcrumb end -->
 
-        <div class="container">
+        <div class="container shop-section">
             <div class="row">
                 <div class="col-lg-3">
                     <div class="categories">
